--- a/examples/todo.js/index.html
+++ b/examples/todo.js/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png">
     <link rel="apple-touch-startup-image" href="assets/images/default.png">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="../../release/lungo-1.0.0.min.css">
+    <link rel="stylesheet" href="../../release/lungo-1.0.1.min.css">
     <link rel="stylesheet" href="../../release/lungo.theme.default.css">
     <!-- Sugars :) -->
     <link rel="stylesheet" href="assets/sugars/lungo.sugar.growl.css">
@@ -127,11 +127,8 @@
 	    </article>
 	</section>
 
-    <!-- Third parties dependencies -->
-    <script src="../../src/lib/zepto.js"></script>
-    <script src="../../src/lib/iscroll.js"></script>
     <!-- LungoJS (Production mode) -->
-    <script src="../../release/lungo-1.0.0.min.js"></script>
+    <script src="../../release/lungo-1.0.1.packed.js"></script>
     <script src="assets/sugars/lungo.sugar.growl.js"></script>
     <!-- LungoJS - Sandbox App -->    
     <script src="app/app.js"></script>
