TODO.app modifications (release 1.0.3)

--- a/examples/todo.js/index.html
+++ b/examples/todo.js/index.html
@@ -18,7 +18,7 @@
     <link rel="apple-touch-icon-precomposed" href="assets/images/icon.png">
     <link rel="apple-touch-startup-image" href="assets/images/default.png">
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="../../release/lungo-1.0.2.min.css">
+    <link rel="stylesheet" href="../../release/lungo-1.0.3.min.css">
     <link rel="stylesheet" href="../../release/lungo.theme.default.css">
     <!-- Sugars :) -->
     <link rel="stylesheet" href="assets/sugars/lungo.sugar.growl.css">
@@ -31,7 +31,7 @@
 			<div class="form">
 				<input type="text" placeholder="Type your user" disabled/>
 				<input type="password" placeholder="Type your password" disabled/>
-				<a href="#main" data-target="section" class="button big blue" data-icon="key">Go to app!</a>
+				<a href="#" id="btnLogin" class="button big blue" data-icon="key">Go to app!</a>
 			</div>
 			<div class="copyright">Copyright TapQuo Inc, 2011</div>
 		</article>
@@ -128,7 +128,8 @@
 	</section>
 
     <!-- LungoJS (Production mode) -->
-    <script src="../../release/lungo-1.0.2.packed.js"></script>
+    <script src="../../release/lungo-1.0.3.packed.js"></script>+
+
     <script src="assets/sugars/lungo.sugar.growl.js"></script>
     <!-- LungoJS - Sandbox App -->
     <script src="app/app.js"></script>
