Touchstart and touched examples

--- a/examples/test_src/index.html
+++ b/examples/test_src/index.html
@@ -136,7 +136,8 @@
                 <strong>Test events</strong>
                 <small class="margin-top-4">... in each row.</small>
             </li>
-	        <li id="event_touchstart"><a href="#">Touchstart me!</a></li>
+	        <li id="event_touchstart">Touchstart me!</li>
+	        <li id="event_touchend">Touchstend me!</li>
 	        <li id="event_tap">Tap me!</li>
 	        <li id="event_doubletap">Double-Tap me!</li>
 	        <li class="anchor" data-icon="shuffle">Special Mobile Events</li>
