Change <markup> of tablet app demo

--- a/examples/tablet/index.html
+++ b/examples/tablet/index.html
@@ -40,13 +40,13 @@
         </header>
 
         <aside>
-            <a href="#main" data-target="article" data-icon="note">Facebook</a>
+            <a href="#main" data-target="article" data-icon="note" data-title="Facebook">Facebook</a>
             <a href="#second" data-target="article" data-icon="twitter" data-title="Twitter">Twitter</a>
-            <a href="#main" data-target="article" data-icon="picture">Flickr</a>
-            <a href="#main" data-target="article" data-icon="cloudup">Upload by ...</a>
-            <a href="#main" data-target="article" data-icon="user">Connect with facebook</a>
-            <a href="#main" data-target="article" data-icon="music">Download music</a>
-            <a href="#main" data-target="article" data-icon="key">Logout</a>
+            <a href="#" data-icon="picture">Flickr</a>
+            <a href="#" data-icon="cloudup">Upload by ...</a>
+            <a href="#" data-icon="user">Connect with facebook</a>
+            <a href="#" data-icon="music">Download music</a>
+            <a href="#" data-icon="key">Logout</a>
         </aside>
         
 		<article id="main" class="list">
@@ -95,8 +95,8 @@
         
         <footer class="toolbar">
             <nav>
-                <a href="#" data-icon="substract"></a>
-                <a href="#" data-icon="add"></a>
+                <a href="#" class="current" data-icon="substract"></a>
+                <a href="#" class="current" data-icon="add"></a>
             </nav>
         </footer>
     </section>
