--- a/examples/tablet/index.html
+++ b/examples/tablet/index.html
@@ -40,7 +40,7 @@
         </header>
 
         <aside>
-            <scroll id="main_scroll">
+            <scroll id="aside_scroll">
                 <div>
             <a href="#main" data-target="article" data-icon="note" data-title="Facebook">Facebook</a>
             <a href="#second" data-target="article" data-icon="twitter" data-title="Twitter">Twitter</a>
